--- a/static/index.html
+++ b/static/index.html
@@ -12,10 +12,10 @@
     <p class="subtitle">(模型: google/gemini-2.5-flash-image-preview:free)</p>
     <div class="main-container">
         <div class="controls-container">
-            <div class="api-key-section">
+<!--             <div class="api-key-section">
                 <h2>设置</h2>
                 <input type="password" id="api-key-input" placeholder="输入你的 OpenRouter API 密钥 (必填)">
-            </div>
+            </div> -->
             <div class="upload-section">
                 <h2>1. 上传图片</h2>
                 <div class="upload-area">
